force-app/main/default/objects/Thread_Event__c/Thread_Event__c.object-meta.xml
<CustomObject>
    <label>Thread Event</label>
    <nameField>
        <label>Thread Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Thread Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>