force-app/main/default/objects/Thread_Event__c/fields/Function_Correction__c.field-meta.xml
<CustomField>
    <fullName>Function_Correction__c</fullName>
    <description>User Corrections for Function Call JSON</description>
    <label>Function Correction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>