force-app/main/default/objects/Thread_Event__c/fields/Thread__c.field-meta.xml
<CustomField>
    <fullName>Thread__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Thread</label>
    <referenceTo>Thread__c</referenceTo>
    <relationshipLabel>Events</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>